kubernetes/kubernetes-jenkins2.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jenkins2-deployment
  namespace: udd
  labels:
    app: jenkins2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins2
  template:
    metadata:
      labels:
        app: jenkins2
        name: jenkins2
    spec:
      securityContext:
        runAsUser: 2001
        runAsGroup: 2001
      containers:
        - name: jenkins2
          image: docker-all-nexus3.supermicro.intra.ruedenfer37.fr/ptoceti/jenkins-master-centos-kubernetes:2.204.6
          ports:
            - containerPort: 8080
              name: jenkins2-http
              protocol: TCP
            - containerPort: 50000
              name: jenkins2-jnlp
              protocol: TCP
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: jenkins2-home
            - mountPath: /var/jenkins_home/.cacerts
              name: cacerts
            - mountPath: /var/jenkins_home/ca/ptoceti-ca.pem
              subPath: ptoceti-ca.pem
              name: ca-certs
            - mountPath: /var/jenkins_home/.gitconfig
              subPath: .gitconfig
              name: gitconfig
          resources:
            limits:
              memory: "4Gi"
              cpu: "2"
            requests:
              memory: "4Gi"
              cpu: "2"
      imagePullSecrets:
        - name: docker-all-nexus3
      volumes:
        - name: jenkins2-home
          hostPath:
            path: /mnt/local-storage/hdd/disk8
            type: Directory
        - name: cacerts
          configMap:
            name: jenkins-master-customcacerts
        - name: ca-certs
          configMap:
            name: ptoceti-authorities-ca-certs
        - name: gitconfig
          configMap:
            name: jenkins-git-config
---
kind: Service
apiVersion: v1
metadata:
  name: jenkins2-http-service
  namespace: udd
spec:
  selector:
    app: jenkins2
  ports:
    - name: jenkins2-http
      port: 80
      targetPort: jenkins2-http
---
kind: Service
apiVersion: v1
metadata:
  name: jenkins2-jnlp-service
  namespace: udd
spec:
  selector:
    app: jenkins2
  ports:
    - name: jenkins2-jnlp
      port: 50000
      targetPort: jenkins2-jnlp
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins2-ingress
  namespace: udd
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
spec:
  tls:
    - hosts:
        - jenkins2.supermicro.intra.ruedenfer37.fr
      secretName: supermicro-tls-secret
  rules:
    - host: jenkins2.supermicro.intra.ruedenfer37.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins2-http-service
              servicePort: jenkins2-http
